--- a/index.html
+++ b/index.html
@@ -2,10 +2,53 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <script type="text/javascript" src="static/js/script.js"></script>
+    <title>Random Number</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
+    <link href="static/css/index.css" rel="stylesheet">
 </head>
+
 <body>
+    <div class="background">
+        <div class="container h-100 d-flex align-items-center justify-content-center">
+            <div class="row">
+                <div class="col-md-4 offset-md-4">
+                    <h1 class="text-white">Random Number</h1>
+                </div>
+
+                <div class="col-md-4 offset-md-4">
+                    <div class="rules">
+                        <p class="text-white">
+                            Devi indovinare il numero magico. Inserisci il numero e poi clicca il pulsante d'avvio
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-md-4 offset-md-4 mt-5">
+                    <form action="" method="get">
+                        <div class="form-group">
+                            <input type="number" name="guess" id="guess" class="form-control w-100">
+                            <input type="button" name="btn" id="guessButton" value="Indovina il numero" class="btn btn-success mt-4 w-100">
+                        </div>
+                    </form>
+
+                    <button id="playAgainButton" class="btn btn-primary d-none w-100 mt-3 fw-bold">
+                        Gioca ancora
+                        <i class="bi bi-arrow-clockwise"></i>
+                    </button>
+                </div>
+
+                <div class="col-md-4 offset-md-4 mt-5">
+                    <h3 class="text-center text-white" id="descriptionText">Inizia a giocare per    vedere i tentativi!</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="static/js/script.js"></script>
+
 </body>
+
 </html>
